v1.3.5 / Added new button to toggle on-off the house marker and circle visibility / house and circle visibility state stored and loaded from local storage / fix: input cover not removed when travel log creator was canceled / fix: using the geolocation, sometimes caused the infoBox "allow the geolocation" to pop-up even if the geolocation was allowed

--- a/styles.css
+++ b/styles.css
@@ -239,7 +239,7 @@ body {
 .sub_container_overlay {
   left: 0%;
   top: 18.25vh;
-  width: 35vw;
+  width: 40vw;
 }
 
 .sub_container_settings {
